# AvionCrashCppM1S7

./: .gitignore  AnalyseurEnergie.cpp  AnalyseurEnergie.h  AnalyseurEnveloppeVol.h  Avion.cpp  CMakeLists.txt  CalculateurTrim.cpp  Config.txt  Config_simulation_full.txt  Constantes.h  Courbes affichage.py  EtatCinematique.cpp  Integration.cpp  Integration.h  LectureNACA.cpp  LectureNACA.h  Makefile  ModeleAerodynamique.h  ModeleHysteresis.cpp  ModeleLineaire.cpp  Phugoid.csv  Phugoide.py  Projet_V0.cpp  Projet_V1.cpp  ProprietesInertie.h  Propulsion.cpp  README.md  SauvetageAvion.cpp  SauvetageAvion.h  SystemeControle.cpp  SystemeControle.h  analyze_pitch_inversion.py  avion_simulation  batch_runner.cpp  compile_commands.json  diagnostic_trim.cpp  diagnostic_trim_v2.cpp  main.cpp  plot  plot_CL_vs_alpha.py  (+9 more)
Code/: Courbes affichage.py  LectureNACA.cpp  main.cpp  main_phugoide.cpp
Doc/: Présentation Yves Gourinat.pptx
Plot python/: Courbes affichage.py  plot_simulation.py
Utilitaires_Python_Cpp/: ConservationEnergie.py  Courbes affichage.py  LectureNACA.h  Projet Informatique.cbp  main  main.cpp  main_phugoide.cpp  main_phugoidebis.cpp
codecpp/: AnalyseurEnergie.cpp  AnalyseurEnveloppeVol.cpp  Avion.cpp  CalculateurTrim.cpp  Constantes.cpp  Environnement.cpp  EtatCinematique.cpp  ForcesAerodynamiques.cpp  Integration.cpp  ModeleAerodynamique.cpp  ModeleHysteresis.cpp  ModeleLineaire.cpp  OptiSauvetageGeneral.cpp  OptimiseurSauvetage.cpp  ProprietesInertie.cpp  Propulsion.cpp  SauvetageAvion.cpp  Simulateur.cpp  SystemeControle.cpp  batch_runner.cpp  (+1 more)
(+47 files in other folders)
